# xitools.py.cppcrawler

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: Doxyfile  examples.dox  style.css
docs/html/: 03_extra_profiling_c2c_2add_extra_profiling_8py-example.html  _input-example.html  annotated.html  annotated_dup.js  classcppcrawler_1_1cppcrawler_1_1_cpp_crawler-members.html  classcppcrawler_1_1cppcrawler_1_1_cpp_crawler.html  classcppcrawler_1_1cppcrawler_1_1_cpp_crawler.js  classcppcrawler_1_1sourcefile_1_1_source_file-members.html  classcppcrawler_1_1sourcefile_1_1_source_file.html  classcppcrawler_1_1sourcefile_1_1_source_file.js  classcppcrawler_1_1sourcematch_1_1_source_match-members.html  classcppcrawler_1_1sourcematch_1_1_source_match.html  classcppcrawler_1_1sourcematch_1_1_source_match.js  classcppcrawler_1_1sourcematch_1_1_source_range_match-members.html  classcppcrawler_1_1sourcematch_1_1_source_range_match.html  classcppcrawler_1_1sourcematch_1_1_source_range_match.js  classcppcrawler_1_1sourcematch_1_1_source_regex_match-members.html  classcppcrawler_1_1sourcematch_1_1_source_regex_match.html  classcppcrawler_1_1sourcematch_1_1_source_regex_match.js  classcppcrawler_1_1sourcematchdict_1_1_source_match_dict-members.html  classcppcrawler_1_1sourcematchdict_1_1_source_match_dict.html  classcppcrawler_1_1syntax_1_1_syntax.html  (+32 more)
tests/: .coveragerc  cppcrawlertests.py  sourcefiletests.py  test_cppcrawler.py  test_sourcefile.py  test_sourcematch.py  test_sourcematchdict.py  test_sourcescopedict.py  test_syntax.py  test_utils.py  testutils.py  tstutils.py
(+67 files in other folders)
