[project]
name = "xitools.py.cppcrawler"
version = "0.1-alpha1"
description = "Module for C++ code processing and syntax analysis"
authors = [
    {name = "Klara Zielińska", email = "clare.blackwater2@gmail.com"},
]
requires-python = ">=3.7"
dependencies = [
	"regex"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Freely Distributable",
    "Operating System :: Microsoft :: Windows",
]

[tool.pdm]
includes = ["src"]
package-dir = "src"
[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
